# StratoSortRust

./: .editorconfig  .env  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  CI_DEPENDENCY_ANALYSIS.md  COMPREHENSIVE_CODEBASE_AUDIT.md  CRITICAL_FIXES_IMPLEMENTED.md  Cargo.toml  PLUGIN_TESTS_SUMMARY.md  README.md  SECURITY.md  SETUP.md  debugga.md  index.html  package-lock.json  package.json  playwright.accessibility.config.ts  playwright.config.ts  postcss.config.js  repomix-output.xml  rustfmt.toml  svelte.config.js  tailwind.config.js  test-results.json  tsconfig.json  verify_windows_fixes.ps1  vite.config.ts  vitest.ci.config.ts  vitest.config.ts  vitest.quick.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
.playwright-mcp/: page-2026-05-24T00-31-13-283Z.yml  page-2026-05-24T00-31-18-180Z.yml  page-2026-05-24T00-31-23-107Z.yml
accessibility-report/: index.html
e2e/: app.accessibility.spec.ts  app.spec.ts
playwright-report/: index.html
scripts/: README.md  check-ollama.js  ci-test.sh  verify-frontend.js
src/: App.svelte  app.css  app.ts  global.d.ts
src-tauri/: .gitignore  Cargo.toml  audit.toml  build.rs  ollama_quick_test_report.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: stratosort.db
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  001_initial_schema_down.sql
src-tauri/src/: config.rs  error.rs  events.rs  lib.rs  lib_test.rs  main.rs  shutdown.rs  state.rs  system_tray.rs
src-tauri/src/ai/: circuit_breaker.rs  connection.rs  embeddings.rs  llm_validator.rs  mod.rs  ollama.rs  streaming.rs
src-tauri/src/ai/tests/: ai_service_tests.rs  dispatcher_tests.rs  fallback_tests.rs  json_extract_tests.rs  mod.rs  sanitization_tests.rs  vision_parse_tests.rs
src-tauri/src/api/: documentation.rs  mod.rs  versioning.rs
src-tauri/src/cache/: advanced.rs  mod.rs
src-tauri/src/commands/: ai.rs  ai_status.rs  archive.rs  diagnostics.rs  files.rs  health.rs  history.rs  mod.rs  monitoring.rs  notifications.rs  organization.rs  organization_enhanced.rs  organize.rs  patterns.rs  settings.rs  setup.rs  system.rs  watch_mode.rs
src-tauri/src/core/: archive_handler.rs  atomic_ops.rs  cache_manager.rs  content_extractor.rs  document_processor.rs  file_analyzer.rs  image_processor.rs  intelligent_fallbacks.rs  llm_workflow.rs  media_analyzer.rs  mod.rs  operation_queue.rs  organizer.rs  pattern_learner.rs  semantic_matcher.rs  smart_folders.rs  undo_redo.rs
src-tauri/src/error/: error_handler.rs
src-tauri/src/features/: conditions.rs  evaluator.rs  flags.rs  mod.rs  provider.rs
src-tauri/src/middleware/: audit.rs  csrf.rs  mod.rs  rate_limit.rs  validation.rs
src-tauri/src/models/: mod.rs
src-tauri/src/monitoring/: mod.rs  performance.rs
src-tauri/src/observability/: context.rs  exporters.rs  metrics.rs  mod.rs  spans.rs  tracing.rs
src-tauri/src/services/: audit_log.rs  file_watcher.rs  file_watcher_state.rs  mod.rs  monitoring.rs  naming_service.rs  notification.rs  progress.rs
src-tauri/src/storage/: database.rs  init.rs  migrations.rs  mod.rs  vector_ext.rs
src-tauri/src/testing/: assertions.rs  fixtures.rs  framework.rs  mod.rs  reporting.rs
src-tauri/src/utils/: diagnostics.rs  memory.rs  mod.rs  security.rs  streaming.rs
src-tauri/tests/: basic_functionality.rs  comprehensive_database_test.rs  integration_tests.rs  run_plugin_tests.ps1  run_plugin_tests.sh  simple_tests.rs  test_backend_fixes.rs  test_compilation.rs  test_end_to_end_connectivity.rs  test_ollama_comprehensive.rs  test_ollama_integration.rs  test_smart_folder_integration.rs  test_tauri_plugins.rs  validate_test_structure.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/concurrency/: test_concurrent_operations.rs  test_thread_safety.rs
src-tauri/tests/database/: test_concurrent_operations.rs  test_connection_pool_exhaustion.rs  test_transaction_rollback.rs  test_transaction_safety.rs
src-tauri/tests/fixtures/: ai_fixtures.rs  database_fixtures.rs  file_fixtures.rs  mod.rs  test_data_generator.rs
src-tauri/tests/fixtures/data/sample_demo_files/: Financials_2024_Q1_Q2.xlsx  MCHAT.stl  b4m2k8.txt  d4s1k7.eps  f5h8j2.py  g4h7n2.xlsx  h3p8w5.gcode  k6t8m1.scad  m6q9r8.psd  n3x6s1.csv  n5r8t3.xml  p8n4w3.ai  qx7n9p.md  r5b9j3.3mf  s8w2k5.csv  sample_contract.txt  w9r3v7.json  x9m2k7.stl  y7j3q9.json
src-tauri/tests/fixtures/data/sample_demo_smart_folders/: sample_demo_smart_folder_names_descriptions
src-tauri/tests/fixtures/sample_data/: diary.txt  lib.rs  main.rs  meeting_notes.md  project_plan.txt  sample.xml  script.py  utils.py
src-tauri/tests/integration/: mod.rs  test_api_endpoints_comprehensive.rs  test_cache_race_conditions.rs  test_command_authorization.rs  test_commands_integration.rs  test_error_handling_comprehensive.rs  test_file_processing_integration.rs  test_first_run_setup.rs  test_full_workflow.rs  test_resource_limits.rs
src-tauri/tests/performance/: mod.rs  test_critical_operation_benchmarks.rs  test_file_processing_performance.rs  test_load_and_stress.rs
src-tauri/tests/plugins/: README.md  mod.rs  plugin_fixtures.rs  plugin_integration.rs  test_http.rs  test_localhost.rs  test_os.rs  test_positioner.rs  test_process.rs  test_single_instance.rs  test_updater.rs  test_window_state.rs
src-tauri/tests/security/: test_files_command_security.rs  test_injection_prevention.rs  test_input_validation_security.rs  test_memory_safety.rs  test_path_traversal_comprehensive.rs  test_sql_injection_comprehensive.rs  test_vector_ext_sql_injection.rs
src-tauri/tests/unit/: mod.rs  test_ai.rs  test_archive_handler.rs  test_commands.rs  test_config.rs  test_config_extended.rs  test_connection.rs  test_database.rs  test_document_processor.rs  test_embeddings.rs  test_error.rs  test_file_analyzer.rs  test_file_watcher.rs  test_image_processor.rs  test_media_analyzer.rs  test_monitoring_service.rs  test_notification_service.rs  test_ollama.rs  test_organizer.rs  test_security.rs  test_smart_folders.rs  test_state_management.rs  test_system_commands.rs  test_undo_redo.rs
(+35 files in other folders)
